@@ -19,7 +19,6 @@ package io.sapl.converter;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -59,7 +58,7 @@ public class TransformFilesToESM {
         if (!"import".equals(terms[0])) {
             String result = converter.convert(content);
             // first remove the byte order mark, then convert to UTF-8
-            Files.write(path, result.replaceFirst("^\uFEFF", "").getBytes(StandardCharsets.UTF_8));
+            Files.writeString(path, result.replaceFirst("^\uFEFF", ""));
         }
     }
 
